# k15_gui

./: .gitignore  CMakeLists.txt  K15_ImageAtlas.h  K15_TextureAtlas.h  README.md  atlas_example.c  bla  build.bat  build.sh  build_line_segment.bat  build_test.bat  example.c  glcorearb.h  k15_gl3.h  k15_gui.h  line_segment.c  stb_image.h  stb_image_write.h  stb_truetype.h  ui_true_type.cpp  ui_true_type.hpp  wglext.h  win32_example.c  win32_testbase.c  x11_example.c
